[metadata]
name = tf-ate
version = 1.0.5
author = Tjark Prokoph
author_email = tjark.prokoph@gmx.de
description = Approximate Text Explanation
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/tjarkpr/ate
project_urls =
    Issues = https://github.com/tjarkpr/ate/issues
    Repository = https://github.com/tjarkpr/ate
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src